2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests cosmetics: remove redundant definitions of variable $tab
	* tests/yacc-d-basic.test ($tab): Remove definition: it's already
	defined in `tests/defs'.
	* tests/yacc-d-cxx.test: Likewise.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: add some tests on bison support (still xfailing)
	Related to automake bug#7648 and PR automake/491.
	* tests/bison-skeleton-cxx.test: New test.
	* tests/bison-skeleton.test: New test.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Updated.

2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test for automake bug#8485 (known regression)
	* tests/yacc-dist-nobuild-subdir.test: New test.
	* tests/Makefile.am (TESTS, XFAIL_TESTS): Update.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test mixed C/C++ yacc-generated parsers in the same dir
	* tests/yacc-mix-c-cxx.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix typos and wording in some yacc tests
	* tests/yacc-cxx.test (foo.cc): Clarify comment about the content
	of this file being valid C++ but invalid C.
	(parse1.yy): Likewise.  Also, remove redundant parentheses in a
	`return' statement.
	* tests/yacc-d-cxx.test (write_parse): Clarify comment about the
	content of the generated files being valid C++ but invalid C.
	(write_main): Likewise.
	* tests/yacc-basic.test: Remove redundant parentheses in a
	`return' statement.
	* tests/yacc-d-vpath.test: Adjust spacing around curly brackets.
	* tests/yaccvpath.test: Likewise.
	* tests/yaccdry.test: Likewise.
	* tests/yacc8.test: Likewise.
	* tests/yacc4.test: Likewise.
	Suggested by Ralf Wildenhues.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: update NEWS and docs about yacc-generated headers extensions
	* doc/automake.texi (Yacc and Lex): Document explicitly that