@@ -1,5 +1,12 @@
 2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	tests: fix spurious failure in test 'yacc-d-cxx.test'
+	* tests/yacc-d-cxx.test: Create ylwrap script before calling
+	automake for the first time, so that the script gets correctly
+	distributed.  Add checks verifying it indeed is.
+
+2011-04-12  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	tests cosmetics: remove redundant definitions of variable $tab
 	* tests/yacc-d-basic.test ($tab): Remove definition: it's already
 	defined in `tests/defs'.
